--- a/point-data-stream/src/main/resources/application.properties
+++ b/point-data-stream/src/main/resources/application.properties
@@ -7,5 +7,8 @@ out.host=localhost
 out.port=8099
 kafka.topic=gps-simulator
 
-stats.folder=C:\\pit\\stats
+stats.folder=/tmp/stats
 stats.flush.period.sec=30
+
+trips.day.limit=1000000
+trips.day.multiplier=300
